--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
 asgiref==3.8.1
-dataclasses==0.6
-Django==4.1.13
-djongo==1.3.6
-dnspython==2.6.1
-pymongo==4.9.1
+Django==5.1.1
+djangorestframework==3.15.2
+gunicorn==20.1.0
+psycopg2-binary==2.9.9
 python-dotenv==1.0.1
-pytz==2024.2
-sqlparse==0.2.4
+setuptools==75.1.0
+sqlparse==0.5.1
 tzdata==2024.2
